--- a/UFO-level-1/index.html
+++ b/UFO-level-1/index.html
@@ -37,10 +37,28 @@
                     <ul class="list-group" id="filters">
                       <li class="filter list-group-item">
                         <label for="date">Enter a Date</label>
-
                         <!-- select #datetime for handleClick() -->
-                        <input class="form-control" id="datetime" type="text" placeholder="1/11/2011">
+                        <input class="form-control" id="datetime" type="text" placeholder="10/20/93">
+                      </li>
+                      
+                      <li class="filter list-group-item">
+                        <label for="city">Enter a City</label>
+                        <input class="form-control" id="city" type="text" placeholder="City">
+                      </li>
 
+                      <li class="filter list-group-item">
+                        <label for="state">Enter a State</label>
+                        <input class="form-control" id="state" type="text" placeholder="State (abbrev.)">
+                      </li>
+
+                      <li class="filter list-group-item">
+                        <label for="country">Enter a Country</label>
+                        <input class="form-control" id="country" type="text" placeholder="Country">
+                      </li>
+
+                      <li class="filter list-group-item">
+                        <label for="shape">Enter a Shape</label>
+                        <input class="form-control" id="Shape" type="text" placeholder="Shape">
                       </li>
                     </ul>
                   </div>
