--- a/UFO-level-1/static/js/index.html
+++ b/UFO-level-1/static/js/index.html
@@ -43,12 +43,12 @@
                       
                       <li class="filter list-group-item">
                         <label for="city">Enter a City</label>
-                        <input class="form-control" id="city" type="text" placeholder="City">
+                        <input class="form-control" id="city" type="text" placeholder="Jackson">
                       </li>
 
                       <li class="filter list-group-item">
                         <label for="state">Enter a State</label>
-                        <input class="form-control" id="state" type="text" placeholder="State (abbrev.)">
+                        <input class="form-control" id="state" type="text" placeholder="MS">
                       </li>
 
                       <li class="filter list-group-item">
@@ -101,8 +101,8 @@
     </footer>
   </div>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/4.11.0/d3.js"></script>
-  <script src="static/js/data.js"></script>
-  <script src="static/js/app.js"></script>
+  <script src="data.js"></script>
+  <script src="app.js"></script>
 </body>
 
 </html>
