commented out unneeded lines

--- a/UFO-level-1/static/js/index.html
+++ b/UFO-level-1/static/js/index.html
@@ -41,7 +41,7 @@
                         <input class="form-control" id="datetime" type="text" placeholder="10/20/93">
                       </li>
                       
-                      <li class="filter list-group-item">
+                      <!-- <li class="filter list-group-item">
                         <label for="city">Enter a City</label>
                         <input class="form-control" id="city" type="text" placeholder="Jackson">
                       </li>
@@ -59,7 +59,7 @@
                       <li class="filter list-group-item">
                         <label for="shape">Enter a Shape</label>
                         <input class="form-control" id="Shape" type="text" placeholder="Shape">
-                      </li>
+                      </li> -->
                     </ul>
                   </div>
 
